--- a/src/pyodide_webassembly_runtime_layer/features/mod.rs.html
+++ b/src/pyodide_webassembly_runtime_layer/features/mod.rs.html
@@ -440,7 +440,7 @@
                 .import_bound(<span class="macro">intern!</span>(py, <span class="string">"js"</span>))<span class="question-mark">?
                 </span>.getattr(<span class="macro">intern!</span>(py, <span class="string">"WebAssembly"</span>))<span class="question-mark">?
                 </span>.getattr(<span class="macro">intern!</span>(py, <span class="string">"validate"</span>))<span class="question-mark">?
-                </span>.into_py(py))
+                </span>.unbind())
         })
         .map(|x| x.bind(py))
 }
@@ -454,7 +454,7 @@
                 .import_bound(<span class="macro">intern!</span>(py, <span class="string">"js"</span>))<span class="question-mark">?
                 </span>.getattr(<span class="macro">intern!</span>(py, <span class="string">"WebAssembly"</span>))<span class="question-mark">?
                 </span>.getattr(<span class="macro">intern!</span>(py, <span class="string">"Module"</span>))<span class="question-mark">?
-                </span>.into_py(py))
+                </span>.unbind())
         })
         .map(|x| x.bind(py))
 }
