deploy: 340281b964963eccbb83f6fa7ca5c267c4013761

--- a/src/pyodide_webassembly_runtime_layer/func.rs.html
+++ b/src/pyodide_webassembly_runtime_layer/func.rs.html
@@ -302,7 +302,7 @@
         Python::with_gil(|py| <span class="self">Self </span>{
             func: <span class="self">self</span>.func.clone_ref(py),
             ty: <span class="self">self</span>.ty.clone(),
-            user_state: <span class="self">self</span>.user_state.clone(),
+            user_state: <span class="self">self</span>.user_state,
         })
     }
 }
