--- a/pyodide_webassembly_runtime_layer/index.html
+++ b/pyodide_webassembly_runtime_layer/index.html
@@ -4,12 +4,12 @@
 backend API to provide access to the web browser’s <a href="https://developer.mozilla.org/en-US/docs/WebAssembly"><code>WebAssembly</code></a> runtime
 using <a href="https://pyodide.org/en/stable/"><code>Pyodide</code></a>.</p>
 <p>The implementation of this crate is heavily inspired by the
-<a href="https://docs.rs/js_wasm_runtime_layer/0.4/"><code>js_wasm_runtime_layer</code></a> backend for the <a href="https://docs.rs/wasm_runtime_layer/0.4/"><code>wasm_runtime_layer</code></a>. Instead of
+<a href="https://docs.rs/js_wasm_runtime_layer/"><code>js_wasm_runtime_layer</code></a> backend for the <a href="https://docs.rs/wasm_runtime_layer/0.4/"><code>wasm_runtime_layer</code></a>. Instead of
 relying on the <a href="https://docs.rs/js-sys/"><code>js-sys</code></a> and <a href="https://docs.rs/wasm-bindgen/"><code>wasm-bindgen</code></a> crates to generate
 JavaScript-based bindings to the <a href="https://developer.mozilla.org/en-US/docs/WebAssembly"><code>WebAssembly</code></a> JavaScript API, this crate
 uses <a href="https://pyodide.org/en/stable/"><code>Pyodide</code></a>’s <a href="https://pyodide.org/en/stable/usage/api/python-api.html"><code>js</code></a> FFI layer to interact with <a href="https://developer.mozilla.org/en-US/docs/WebAssembly"><code>WebAssembly</code></a> through
 Python running inside WASM. <code>pyodide-webassembly-runtime-layer</code> is therefore
-useful when developing a Python module in Rust, e.g. using <a href="https://docs.rs/pyo3/0.22/"><code>PyO3</code></a>, which
+useful when developing a Python module in Rust, e.g. using <a href="https://docs.rs/pyo3/0.23/"><code>PyO3</code></a>, which
 requires access to some WASM runtime using the <a href="https://docs.rs/wasm_runtime_layer/0.4/"><code>wasm_runtime_layer</code></a> API
 and may be deployed to the web itself using <a href="https://pyodide.org/en/stable/"><code>Pyodide</code></a>.</p>
 <h3 id="memory-management"><a class="doc-anchor" href="#memory-management">§</a>Memory Management</h3>
